--- a/mink.html
+++ b/mink.html
@@ -58,25 +58,25 @@
           <div class="carousel-item active"> <img class="d-block w-100" src="images/mink/mink4.jpg"
         alt="First slide"> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink5.jpg"
-        alt="Second slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink6.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink7.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink8.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink9.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink10.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink11.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink12.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink13.jpg"
-        alt="Third slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink14.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink14.JPG"
+        alt=""> </div>
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselmink1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselmink1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a> </div>
   </div>
