--- a/sound.html
+++ b/sound.html
@@ -37,7 +37,7 @@
 	<b>Well</b>
 	<br>
 	<br>
-	  	<img src="images/sound/wellcronica.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+	  	<img src="images/sound/wellcronica.jpg" height="1500" width="2250" class="img-fluid" alt="">
 <br>
 	  <br>
 	  Well is an experimental duo based in Porto, Portugal, formed by Inês Castanheira and João Sarnadas. They just released Tape under the Favela Discos wing, using various instruments built by Inês, and some other more normal things like pedals and stuff. Between mantras, slow melodies, and rhythm both tribal and mechanic, they use mostly repetition and surprise to constrict and construct their sound. Tape is the first release under the name Well, but the duo has other music that can be heard on their bandcamp page. And if Inês is strongly connected to music, creating electronic objects and experimenting in hardware hacking, Sarnadas for the last decade, has been creating a strong presence in the Portuguese music scene with projects like Coelho Radioactivo, Flamingos and the label Favela Discos The album’s last track is also present in Memories Overlooked, a tribute album to Leyland Kirby (The Caretaker) curated by Nmesh and released by No Problema Tapes.
@@ -64,27 +64,70 @@ Edited by Favela Discos<br>
 	<br>
 	<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1480887178/size=small/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://welll.bandcamp.com/album/tape">Tape by Well</a></iframe>
 	<br>
-	<img src="images/sound/tapecover.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
-	  <img src="images/sound/tape.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+	<img src="images/sound/tapecover.jpg" height="1500" width="2250" class="img-fluid" alt="">
+	  <img src="images/sound/tape.jpg" height="1500" width="2250" class="img-fluid" alt="">
 	<br>
 	<br>
     <div class="texto"><b>#Memories Overlooked</b><br>
-      A tribute album to Leyland Kirby (The Caretaker), curated by Nmesh and released by No Problema Tapes</div>
+      A tribute album to Leyland Kirby (The Caretaker), curated by Nmesh and released by No Problema Tapes
 	<br>
 	<br>
 <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2086143994/size=small/bgcol=ffffff/linkcol=333333/track=628671056/transparent=true/" seamless><a href="http://caretakertribute.bandcamp.com/album/memories-overlooked-a-tribute-to-the-caretaker">Memories Overlooked: A Tribute To The Caretaker by Various Artists</a></iframe>
 	<br>
 	<br>
-		<img src="images/sound/memories.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+		<img src="images/sound/memories.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
 	
 	
 </div>
 	<br>
 	<br>
+	<br>
+    <div class="texto"> <b>Mink</b><br><br>
+      Mink is Marta Ångela, Inês Castanheira and Diana Combo directed by Kaffe Matthews and commissioned by Sonoscopia for Colexpla International Festival of Sonic Explorers,  Teatro Carlos Alberto, Porto, September 2018. Working live with DIY electronics, voice, software, field recordings, a pau, improvisation and multichannel diffusion, together they explore the phenomenon of magnetism through contemporary urban landscapes and the human body, going deep underground in air and underwater, creating unknown and curious atmospheres via massive and intricate noise fields to the tiniest of details. <br><br>
 	
-	  
+		<a href="https://festivalcolexpla.com/pt/">www.festivalcolexpla.com</a>
+		<br><br>
+		<b>Colexpla International Festival of Sonic Explorers,  Teatro Carlos Alberto, Porto, September 2018</b> <br>
+    Photos by Rui Pinheiro <br><br>
+		
+			<img src="images/mink/mink.JPG" height="1500" width="2250" class="img-fluid" alt="">
+			<img src="images/mink/mink4.jpg" height="1500" width="2250" class="img-fluid" alt="">
+ <div id="carouselsound1" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+          <div class="carousel-item active"> <img class="d-block w-100" src="images/mink/mink5.jpg"
+        alt="First slide"> </div>
      
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink6.jpg"
+        alt=""> </div>
+        
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink8.jpg"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink9.jpg"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink10.jpg"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink11.jpg"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink12.jpg"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink13.jpg"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink14.JPG"
+        alt=""> </div>
+		<div class="carousel-item"> <img class="d-block w-100" src="images/mink/mink7.JPG"
+        alt=""> </div>
+        </div>
+    <div class="arrows"> <a class="carousel-control-prev" href="#carouselsound1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselsound1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a> </div>
+  </div>
+      <br>
+      <br>
+	
+	
+	</div>
+	
+	
+</div>
   </div>
 	<div class="container">
       <div class=" col-4 draggable" style="margin: 40px 0px 20px 0px"><a class="thumb" href="about2.html"> <img src="" alt=""/>
