--- a/mosaico.html
+++ b/mosaico.html
@@ -70,15 +70,49 @@
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselmosaico1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselmosaico1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
   </div>
+	
+	<br>
+	<br>
+	<div class="texto">
+	<b> Poste - vídeo arte</b><br>
+	  Group Exhibition, Curated by Francisco Laranjeira, Extéril, Porto, 2019</div>
+	  <br>
+	  <br>
+	
+     
+      <div id="carouselmosaico2" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+          <div class="carousel-item active"> <img class="d-block w-100" src="images/mosaico/mosaico7.jpg"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico8.JPG"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico9.JPG"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico10.jpg"
+        alt=""> </div>
     
+        </div>
+    <div class="arrows"> <a class="carousel-control-prev" href="#carouselmosaico2" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselmosaico2" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
+  </div>
+	
+	<br>
+	<br>
+	<div class="texto">
+	<b> Via Aberta</b><br>
+	  Group Exhibition, Mota Galiza, Porto, 2019</div>
+	  <br>
+	  <br>
+	
+               <img src="images/mosaico/mosaico11.jpg" height="1500" width="2250" class="img-fluid" alt="">
+
 	</div>
-	<br>
-	<br>
+	</div>
+	
 <div class="container">
-      <div class=" col-4 draggable" style="margin: 0px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
+      <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
         <div class="caption"><span>Alvor </span></div>
         </a> </div>
-      <div class="col-4 draggable" style="margin: 0px 0px 0px 0px;"> <a class="thumb" href="mosaico.html"> <img src="" alt=""/>
+      <div class="col-4 draggable" style="margin: 20px 0px 0px 0px;"> <a class="thumb" href="mosaico.html"> <img src="" alt=""/>
         <div class="caption"><span>Mosaico</span></div>
         </a> </div>
       <div class="col-4 draggable"  style="margin: 30px 0px 0px 0px;"> <a class="thumb" href="spacetime.html"> <img src="" alt=""/>
