--- a/expand.html
+++ b/expand.html
@@ -66,7 +66,7 @@ at O Espaço do Tempo, Montemor-o-novo and Ciência Viva, Lisbon, 2018/2019
       During the residency, light materials, electric candles, toys and other devices were collected in search of new sounds to be implemented in the installation. The electronic materials found have been reconfigured through the process of exploratory hacking of its interior and exterior, seeking to build new tangible, sound and visual possibilities, to develop a set of sound and visual objects that can be used in the context of interactive installation in contact with the public. </div>
 <br>
 <br>
-<img src="images/expand/expand4.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+<img src="images/expand/expand4.JPG" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
 <div id="carouselexpand2" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
     <div class="carousel-item active"> <img class="d-block w-100" src="images/expand/expand7.JPG"
@@ -87,9 +87,9 @@ at O Espaço do Tempo, Montemor-o-novo and Ciência Viva, Lisbon, 2018/2019
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/expand/lightexpand.jpg"
         alt="First slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/expand/expand11.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/expand/expand11.jpg"
         alt="Second slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/expand/expand13.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/expand/expand13.jpg"
         alt="Second slide"> </div>
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselexpand3" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselexpand3" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
