--- a/light.html
+++ b/light.html
@@ -76,8 +76,6 @@
         alt="First slide"> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/light/lightcaaa2.png"
         alt="Second slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/light/lightcaaa3.png"
-        alt="Third slide"> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/light/lightcaaa6.png"
         alt="Third slide"> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/light/lightcaaa7.png"
@@ -114,7 +112,6 @@
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselexpand2" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselexpand2" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
   </div>
-    </div>
 	
 	<br>
 	<br>
@@ -133,7 +130,7 @@
         alt="Second slide"> </div>
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselexpand4" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselexpand4" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
-  </div>
+  </div> </div>
 	<br>
 <div class="container">
       <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
